PHRAS-3468 : (fixed in 3602) fix basket content still visible when baskets are hidden (wz-filter)

--- a/Phraseanet-production-client/src/skins/style/ui-components/_jquery-ui.scss
+++ b/Phraseanet-production-client/src/skins/style/ui-components/_jquery-ui.scss
@@ -121,7 +121,7 @@ $basketBg: $darkBackgroundColor !default;
 
 .ui-accordion .ui-accordion-content {
     padding: 0;
-    min-height: 120px;
+    // min-height: 120px;
     border: none !important;
     border-radius: 0;
 }
